--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sahrija's Forge 🛠️</title>
+    <title>Sahrija's Forge Lab 🛠️</title>
 </head>
 <body>
     <h1>Hello, I'm Sahrija</h1>
@@ -12,5 +12,8 @@
         <li><a href="https://github.com/sahrija/UTS-frontend-2024">Stay&safe</a></li>
         <li><a href="https://github.com/Sahrija/Sobat-Sehat">Sobat Sehat</a></li>
     </ul>
+
+    <p>UNDER CONSTRUCTION</p> 
+    <p>there will be more section soon ...</p>
 </body>
 </html>
